jt-jiffle/jt-jiffle-language/src/test/resources/it/geosolutions/jaiext/jiffle/parser/ReadingFromDestImage.jfl
images {
  src = read;
  dest = write;
}

foo = src;  // valid: reading value from source
foo = dest; // error: reading from destination

